--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   glossy: ^0.0.4
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
