--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   glossy: ^0.0.4
   google_fonts: ^6.2.1
+  flutter_file_downloader: ^2.0.0
 
 dev_dependencies:
   flutter_test:
