--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
   assets:
      - assets/background_image.jpg
      - assets/profile.png
+     - assets/resume.pdf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
