--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   animated_icon: ^0.0.9
   flutter_svg: ^2.0.10+1
   timeline_tile: ^2.0.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
