--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   url_launcher: ^6.3.0
   auto_size_text: ^3.0.0
   webview_flutter: ^4.9.0
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
