--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -1,5 +1,5 @@
-name: portfolioweb
-description: "A new Flutter project."
+name: Nakul_Dev
+description: "Hi, I'm Nakul, a computer engineer passionate about building innovative tech solutions."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -36,18 +36,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  glossy: ^0.0.4
   google_fonts: ^6.2.1
-  flutter_file_downloader: ^2.0.0
-  rive_animated_icon: ^2.0.0
-  animated_icon: ^0.0.9
   flutter_svg: ^2.0.10+1
   timeline_tile: ^2.0.0
   http: ^1.2.2
   url_launcher: ^6.3.0
   auto_size_text: ^3.0.0
-  webview_flutter: ^4.9.0
   scrollable_positioned_list: ^0.3.8
+  flutter_native_splash: ^2.4.1
+  # lottie: ^3.1.2
+  # animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +72,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    #  - assets/animation/Animation - 1727615545788.json
      - assets/background_image.jpg
      - assets/profile.png
      - assets/location.png
@@ -95,9 +94,12 @@ flutter:
      - assets/svg/instagram.svg
      - assets/svg/hackerrank.svg
      - assets/svg/github.svg
+flutter_native_splash:
+  android: true
+  ios: true
+  web: true
+  color: "#000000"
 
-     
-     
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
