--- a/portfolioweb/analysis_options.yaml
+++ b/portfolioweb/analysis_options.yaml
@@ -12,6 +12,7 @@ analyzer:
   errors:
     avoid_web_libraries_in_flutter: ignore
     camel_case_types: ignore
+    deprecated_member_use: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
