--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -72,8 +72,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    #  - assets/animation/Animation - 1727615545788.json
      - assets/background_image.jpg
+     - assets/ss/appleMusic.jpg
+     - assets/ss/calc.jpg
+     - assets/ss/ticTac.jpg
+     - assets/ss/toDo.jpg
+     - assets/ss/stopWatch.jpg
+     - assets/ss/weather.jpg
      - assets/profile.png
      - assets/location.png
      - assets/locD.png
