--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
      - assets/ss/toDo.jpg
      - assets/ss/stopWatch.jpg
      - assets/ss/weather.jpg
+     - assets/ss/portWeb.jpg
      - assets/profile.png
      - assets/location.png
      - assets/locD.png
