--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   auto_size_text: ^3.0.0
   scrollable_positioned_list: ^0.3.8
   flutter_native_splash: ^2.4.1
+  google_maps_flutter: ^2.1.2
+  geolocator: ^9.0.1
+  flutter_bloc: ^8.1.1
   # lottie: ^3.1.2
   # animated_splash_screen: ^1.3.0
 
