--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -44,9 +44,12 @@ dependencies:
   auto_size_text: ^3.0.0
   scrollable_positioned_list: ^0.3.8
   flutter_native_splash: ^2.4.1
-  google_maps_flutter: ^2.1.2
+  google_maps_flutter: ^2.9.0
   geolocator: ^9.0.1
   flutter_bloc: ^8.1.1
+  flutter_osm_plugin: ^1.3.3+1
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
   # lottie: ^3.1.2
   # animated_splash_screen: ^1.3.0
 
@@ -86,6 +89,7 @@ flutter:
      - assets/profile.png
      - assets/location.png
      - assets/locD.png
+     - assets/i.png
      - assets/svg/blender.svg
      - assets/svg/cpp.svg
      - assets/svg/css.svg
