--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
      - assets/location.png
      - assets/locD.png
      - assets/i.png
+     - assets/pfp2.png
      - assets/svg/blender.svg
      - assets/svg/cpp.svg
      - assets/svg/css.svg
