--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_osm_plugin: ^1.3.3+1
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
+  google_nav_bar: ^5.0.6
+  flutter_map_cancellable_tile_provider: ^3.0.2
   # lottie: ^3.1.2
   # animated_splash_screen: ^1.3.0
 
@@ -108,6 +110,8 @@ flutter:
      - assets/svg/instagram.svg
      - assets/svg/hackerrank.svg
      - assets/svg/github.svg
+     - assets/svg/404.svg
+
 flutter_native_splash:
   android: true
   ios: true
