--- a/portfolioweb/pubspec.yaml
+++ b/portfolioweb/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   latlong2: ^0.9.1
   google_nav_bar: ^5.0.6
   flutter_map_cancellable_tile_provider: ^3.0.2
+  marquee_list: ^1.0.0
   # lottie: ^3.1.2
   # animated_splash_screen: ^1.3.0
 
