--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,6 +7,13 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
+analyzer:
+  errors:
+    non_constant_identifier_names: ignore
+    file_names: ignore
+    deprecated_member_use: ignore
+    library_private_types_in_public_api: ignore
+    camel_case_types: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
