--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,84 +1,37 @@
-name: Nakul_Dev
+name: nakul_dev
 description: "Hi, I'm Nakul, a computer engineer passionate about building innovative tech solutions."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
+publish_to: 'none'
+
+
 version: 1.0.0+1
 
 environment:
   sdk: ^3.5.3
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   timeline_tile: ^2.0.0
-  http: ^1.2.2
   url_launcher: ^6.3.0
   auto_size_text: ^3.0.0
   scrollable_positioned_list: ^0.3.8
-  flutter_native_splash: ^2.4.1
-  google_maps_flutter: ^2.9.0
-  geolocator: ^9.0.1
-  flutter_bloc: ^8.1.1
-  flutter_osm_plugin: ^1.3.3+1
-  flutter_map: ^7.0.2
-  latlong2: ^0.9.1
   google_nav_bar: ^5.0.6
   flutter_map_cancellable_tile_provider: ^3.0.2
-  marquee_list: ^1.0.0
-  cached_network_image: ^3.4.1
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^4.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/background_image.jpg
      - assets/ss/qrcode.jpg
      - assets/ss/appleMusic.jpg
      - assets/ss/calc.jpg
@@ -87,20 +40,15 @@ flutter:
      - assets/ss/stopWatch.jpg
      - assets/ss/weather.jpg
      - assets/ss/portWeb.jpg
-     - assets/profile.png
-     - assets/location.png
-     - assets/locD.png
      - assets/i.png
      - assets/pfp2.png
      - assets/book.png
-
      - assets/emoji/Airplane.png
      - assets/emoji/Book.png
      - assets/emoji/Brain.png
      - assets/emoji/Gym.png
      - assets/emoji/Magnifier.png
      - assets/emoji/Moon.png
-
      - assets/svg/blender.svg
      - assets/svg/cpp.svg
      - assets/svg/css.svg
@@ -121,44 +69,3 @@ flutter:
      - assets/svg/404.svg
      - assets/svg/email.svg
 
-
-
-
-
-
-
-
-
-flutter_native_splash:
-  android: true
-  ios: true
-  web: true
-  color: "#000000"
-
-
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
