Added new animation package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
   http: ^1.2.2
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
